CenterManifest/studentdb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: studentapp-db-svc
spec:
  type: ClusterIP
  selector:
    app: studentapp-db
  ports:
  - port: 3306
    targetPort: 3306
